--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test node --test ",
+    "dev": "NODE_ENV=development node --watch index.js ",
+    "start": "NODE_ENV=production node index.js "
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "jest": "^30.0.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "supertest": "^7.1.1"
